// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrow-direction prop 1`] = `
<div role="button" tabindex="0" class="ghb-cell ghb-cell--clickable ghb-field">
  <div class="ghb-cell__value ghb-cell__value--alone ghb-field__value">
    <div class="ghb-field__body"><input type="text" class="ghb-field__control"></div>
  </div><i class="ghb-icon ghb-icon-arrow-up ghb-cell__right-icon">
    <!----></i>
</div>
`;

exports[`clearable prop 1`] = `
<div class="ghb-cell ghb-field">
  <div class="ghb-cell__value ghb-cell__value--alone ghb-field__value">
    <div class="ghb-field__body"><input type="text" class="ghb-field__control"></div>
  </div>
</div>
`;

exports[`clearable prop 2`] = `
<div class="ghb-cell ghb-field">
  <div class="ghb-cell__value ghb-cell__value--alone ghb-field__value">
    <div class="ghb-field__body"><input type="text" class="ghb-field__control"><i class="ghb-icon ghb-icon-clear ghb-field__clear">
        <!----></i></div>
  </div>
</div>
`;

exports[`colon prop 1`] = `
<div class="ghb-cell ghb-field">
  <div class="ghb-cell__title ghb-field__label"><span>foo:</span></div>
  <div class="ghb-cell__value ghb-field__value">
    <div class="ghb-field__body"><input type="text" class="ghb-field__control"></div>
  </div>
</div>
`;

exports[`label-class prop 1`] = `
<div class="ghb-cell ghb-field">
  <div class="ghb-cell__title ghb-field__label custom-label-class"><span>Label</span></div>
  <div class="ghb-cell__value ghb-field__value">
    <div class="ghb-field__body"><input type="text" class="ghb-field__control"></div>
  </div>
</div>
`;

exports[`label-width prop with unit 1`] = `
<div class="ghb-cell ghb-field">
  <div class="ghb-cell__title ghb-field__label" style="width: 10rem;"><span>Label</span></div>
  <div class="ghb-cell__value ghb-field__value">
    <div class="ghb-field__body"><input type="text" class="ghb-field__control"></div>
  </div>
</div>
`;

exports[`label-width prop without unit 1`] = `
<div class="ghb-cell ghb-field">
  <div class="ghb-cell__title ghb-field__label" style="width: 100px;"><span>Label</span></div>
  <div class="ghb-cell__value ghb-field__value">
    <div class="ghb-field__body"><input type="text" class="ghb-field__control"></div>
  </div>
</div>
`;

exports[`name prop 1`] = `
<div class="ghb-cell ghb-field">
  <div class="ghb-cell__value ghb-cell__value--alone ghb-field__value">
    <div class="ghb-field__body"><input type="text" name="foo" class="ghb-field__control"></div>
  </div>
</div>
`;

exports[`reach max word-limit 1`] = `
<div class="ghb-cell ghb-field">
  <div class="ghb-cell__value ghb-cell__value--alone ghb-field__value">
    <div class="ghb-field__body"><input type="text" class="ghb-field__control"></div>
    <div class="ghb-field__word-limit"><span class="ghb-field__word-num">3</span>/3</div>
  </div>
</div>
`;

exports[`reach max word-limit null 1`] = `
<div class="ghb-cell ghb-field">
  <div class="ghb-cell__value ghb-cell__value--alone ghb-field__value">
    <div class="ghb-field__body"><input type="text" class="ghb-field__control"></div>
    <div class="ghb-field__word-limit"><span class="ghb-field__word-num">0</span>/3</div>
  </div>
</div>
`;

exports[`reach max word-limit undefined 1`] = `
<div class="ghb-cell ghb-field">
  <div class="ghb-cell__value ghb-cell__value--alone ghb-field__value">
    <div class="ghb-field__body"><input type="text" class="ghb-field__control"></div>
    <div class="ghb-field__word-limit"><span class="ghb-field__word-num">0</span>/3</div>
  </div>
</div>
`;

exports[`render extra slot 1`] = `
<div class="ghb-cell ghb-field">
  <div class="ghb-cell__value ghb-cell__value--alone ghb-field__value">
    <div class="ghb-field__body"><input type="text" class="ghb-field__control"></div>
  </div>Extra
</div>
`;

exports[`render input slot 1`] = `
<div class="ghb-cell ghb-field">
  <div class="ghb-cell__value ghb-cell__value--alone ghb-field__value">
    <div class="ghb-field__body">
      <div class="ghb-field__control ghb-field__control--custom">Custom Input</div>
    </div>
  </div>
</div>
`;

exports[`render label slot 1`] = `
<div class="ghb-cell ghb-field">
  <div class="ghb-cell__title ghb-field__label">Custom Label</div>
  <div class="ghb-cell__value ghb-field__value">
    <div class="ghb-field__body"><input type="text" class="ghb-field__control"></div>
  </div>
</div>
`;

exports[`render textarea 1`] = `
<div class="ghb-cell ghb-field">
  <div class="ghb-cell__value ghb-cell__value--alone ghb-field__value">
    <div class="ghb-field__body"><textarea class="ghb-field__control" style="height: auto;"></textarea></div>
  </div>
</div>
`;

exports[`size prop 1`] = `
<div class="ghb-cell ghb-cell--large ghb-field">
  <div class="ghb-cell__value ghb-cell__value--alone ghb-field__value">
    <div class="ghb-field__body"><input type="text" class="ghb-field__control"></div>
  </div>
</div>
`;
